--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#oportunidades">Central de Oportunidades</a></li>
                 <li><a href="#mapa">Mapa de Recursos</a></li>
+                <li><a href="#trabalhos">Trabalhos e Pesquisas</a></li>
                 <li><a href="#sobre">Sobre a Plataforma</a></li>
                 <li><a href="#contato">Contato</a></li>
             </ul>
@@ -42,6 +43,30 @@
         </div>
     </section>
 
+    <section id="trabalhos">
+        <h2>Trabalhos e Pesquisas</h2>
+        <ul>
+            <li>
+                <h3>Impacto da Imigração na Economia Local</h3>
+                <p><strong>Autor(es):</strong> João Silva, Maria Oliveira</p>
+                <p><strong>Resumo:</strong> Este estudo analisa os efeitos da imigração no mercado de trabalho e na economia de São Paulo.</p>
+                <a href="#" target="_blank">Acessar trabalho completo</a>
+            </li>
+            <li>
+                <h3>Políticas Públicas para Refugiados no Brasil</h3>
+                <p><strong>Autor(es):</strong> Ana Souza</p>
+                <p><strong>Resumo:</strong> Uma revisão das políticas públicas brasileiras voltadas para a integração de refugiados.</p>
+                <a href="#" target="_blank">Acessar trabalho completo</a>
+            </li>
+            <li>
+                <h3>Desafios Educacionais para Crianças Imigrantes</h3>
+                <p><strong>Autor(es):</strong> Carlos Mendes</p>
+                <p><strong>Resumo:</strong> Investigação sobre os desafios enfrentados por crianças imigrantes no sistema educacional brasileiro.</p>
+                <a href="#" target="_blank">Acessar trabalho completo</a>
+            </li>
+        </ul>
+    </section>
+
     <section id="sobre">
         <h2>Sobre a Plataforma</h2>
         <p>Esta plataforma foi desenvolvida para apoiar a comunidade acadêmica e imigrantes, fornecendo informações e recursos úteis.</p>
@@ -64,7 +89,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Plataforma USP - Imigração e Refúgio</p>
+        <p>&copy; 2023 Plataforma USP - Imigração e Refúgio</p>
     </footer>
 </body>
 </html>
