--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
                 <li><a href="#contato">Contato</a></li>
             </ul>
         </nav>
+        <div class="search-bar">
+            <input type="text" placeholder="Pesquisar...">
+            <button type="submit"><i class="fas fa-search"></i></button>
+        </div>
     </header>
 
     <section id="home">
