--- a/index.html
+++ b/index.html
@@ -40,11 +40,34 @@
 
     <section id="mapa">
         <h2>Mapa de Recursos</h2>
-        <div id="mapa-interativo">
-            <!-- Aqui você pode integrar um mapa usando Google Maps ou Leaflet.js -->
-            <p>Mapa interativo será inserido aqui.</p>
-        </div>
+        <div id="mapa-interativo" style="height: 400px; border-radius: 8px; overflow: hidden;"></div>
     </section>
+
+    <!-- Restante do conteúdo do site -->
+
+    <footer>
+        <p>&copy; 2023 Plataforma USP - Imigração e Refúgio</p>
+    </footer>
+
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    <script>
+        // Coordenadas da Cidade Universitária da USP
+        const cidadeUniversitaria = [-23.561399, -46.730789];
+
+        // Cria o mapa
+        const map = L.map('mapa-interativo').setView(cidadeUniversitaria, 15);
+
+        // Adiciona o mapa base do OpenStreetMap
+        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+            attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+        }).addTo(map);
+
+        // Adiciona um marcador
+        L.marker(cidadeUniversitaria)
+            .addTo(map)
+            .bindPopup('Cidade Universitária da USP')
+            .openPopup();
+    </script>
 
     <section id="trabalhos">
         <h2>Trabalhos e Pesquisas</h2>
