--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plataforma USP - Imigração e Refúgio</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -37,8 +38,7 @@
             <li><a href="#auxilio1">Auxílio: Bolsas para Imigrantes</a></li>
         </ul>
     </section>
-  
-    <!-- Restante do conteúdo do site -->
+
     <section id="trabalhos">
         <h2>Trabalhos e Pesquisas</h2>
         <ul>
@@ -68,26 +68,6 @@
         <div id="mapa-interativo" style="height: 400px; border-radius: 8px; overflow: hidden;"></div>
     </section>
 
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-    <script>
-        // Coordenadas da Cidade Universitária da USP
-        const cidadeUniversitaria = [-23.561399, -46.730789];
-
-        // Cria o mapa
-        const map = L.map('mapa-interativo').setView(cidadeUniversitaria, 15);
-
-        // Adiciona o mapa base do OpenStreetMap
-        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-            attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
-        }).addTo(map);
-
-        // Adiciona um marcador
-        L.marker(cidadeUniversitaria)
-            .addTo(map)
-            .bindPopup('Cidade Universitária da USP')
-            .openPopup();
-    </script>
-
     <section id="contato">
         <h2>Contato</h2>
         <form action="#" method="post">
@@ -112,5 +92,25 @@
     <footer>
         <p>&copy; 2025 Plataforma USP - Imigração e Refúgio</p>
     </footer>
+
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    <script>
+        // Coordenadas da Cidade Universitária da USP
+        const cidadeUniversitaria = [-23.561399, -46.730789];
+
+        // Cria o mapa
+        const map = L.map('mapa-interativo').setView(cidadeUniversitaria, 15);
+
+        // Adiciona o mapa base do OpenStreetMap
+        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+            attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+        }).addTo(map);
+
+        // Adiciona um marcador
+        L.marker(cidadeUniversitaria)
+            .addTo(map)
+            .bindPopup('Cidade Universitária da USP')
+            .openPopup();
+    </script>
 </body>
 </html>
